Separate mobile and nonmobile CSS entirely and fix icon alignment

--- a/assets/css/nav/_top_nav.scss
+++ b/assets/css/nav/_top_nav.scss
@@ -28,8 +28,7 @@
   }
 }
 
-.m-top-nav__right-items,
-.m-top-nav__left-items {
+.m-top-nav__right-items {
   display: flex;
 
   :not(:last-child) {
@@ -37,9 +36,8 @@
   }
 }
 
-.m-top-nav__right-item,
-.m-top-nav__left-item {
-  @include button-icon(1rem);
+.m-top-nav__right-item {
+  @include button-icon(1.5rem);
   color: $color-gray-600;
 
   & span svg {
